--- a/betareborn.csproj
+++ b/betareborn.csproj
@@ -24,5 +24,10 @@
     <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
     <PackageReference Include="Silk.NET.Windowing.Glfw" Version="2.22.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Include="shaders/chunk.vert"/>
+    <EmbeddedResource Include="shaders/chunk.frag"/>
+  </ItemGroup>
 
 </Project>
