Fix more build issues

--- a/BetaSharp.Server/BetaSharp.Server.csproj
+++ b/BetaSharp.Server/BetaSharp.Server.csproj
@@ -6,6 +6,7 @@
     <CetCompat>disable</CetCompat>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
